--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "backend",
+  "name": "review-collect",
   "version": "1.0.0",
-  "description": "",
+  "description": "Review collect platform backend in node.js",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
   },
-  "keywords": [],
+  "keywords": ["reviews", "mern stack", "SAAS", "product", "collect-reviews", "open source"],
   "author": "",
   "license": "ISC",
   "dependencies": {
